--- a/Updated by Brady HTML PAGES/home.html
+++ b/Updated by Brady HTML PAGES/home.html
@@ -36,7 +36,7 @@
 																<div class="content">
 																	<center><h1><font color="white">Home Page</font></h1></center>
 																	<p>
-																			Home Page text will go here. We are waiting on getting info from Jax on what she wants here.
+																			Hi, my name is Jax. 
 																	</p>
 																</div>
 															</td>
